k8s/deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xuanspa-deploy
  namespace: old-project
  labels:
    app: xuanspa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xuanspa
  template:
    metadata:
      labels:
        app: xuanspa
    spec:
      containers:
      - name: xuanspa
        image: prisdom/xuanspa
        livenessProbe:
          httpGet:
            path: /
            port: 5050
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 5050
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: xuanspa-svc
  namespace: old-project
spec:
  type: NodePort
  selector:
    app: xuanspa
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
      nodePort: 30050
