k8s/mongo-deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  namespace: old-project
  labels:
    db: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongo
  template:
    metadata:
      labels:
        db: mongo
    spec:
      volumes:
      - name: db-vol
        persistentVolumeClaim:
          claimName: xuanspa-pvc
      containers:
      - name: mongo-db
        volumeMounts:
        - mountPath: /data/db/
          name: db-vol
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: old-project
spec:
  selector:
    db: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
