k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projects-ingress
  namespace: old-project
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
spec:
  tls:
  - hosts:
    - xuanspadanang.com
    - www.xuanspadanang.com
    secretName: xuanspa-tls
  ingressClassName: nginx
  rules:
  - host: xuanspadanang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xuanspa-svc
            port:
              number: 5050
